syntax = "proto3";

package bokvpb;

// 命令请求
message CmdRequest {
    oneof req_data {
        Get get = 1;
        Set set = 2;
    }
}

// 服务器的响应
message CmdResponse {
    uint32 status = 1;
    string message = 2;
    bytes value = 3;
}

// 请求值命令
message Get {
    string key = 1;
}

// 存储值命令
message Set {
    string key = 1;
    bytes value = 2;
    uint32 expire = 3;
}